2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-10-20  Eric Anholt  <anholt@FreeBSD.org>

	* Makefile.am:
	Fix spelling of man1_MANS so the manpage gets installed. (Bill Crawford)

2005-07-09  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	Add .cvsignore files