@@ -17,6 +17,7 @@ PKG_CHECK_MODULES(XCURSORGEN, x11 xcursor libpng12)
 AC_SUBST(XCURSOR_CFLAGS)
 AC_SUBST(XCURSOR_LIBS)
 
+XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
 AC_OUTPUT([Makefile])
